--- a/less/blogger-custom.less
+++ b/less/blogger-custom.less
@@ -66,7 +66,7 @@ header {
            transition: ease-in-out .25s;
 }
 /* settings for navigation while scrolling */
-#PageList1 {z-index: 10000;} /* IE fix for z-index */
+#PageList1 {_z-index: 10000;} /* IE fix for z-index */
 #PageList1 .affix {
   width: 100%;
   top: 2px;
